# dd-edit

./: .gitignore  DESIGN.md  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  verify-typing.cjs  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: build-sidecar.mjs  gen-types.mjs
sidecar/: README.md  build-binary.sh  build_binary.py  pyinstaller_entry.py  pyproject.toml
sidecar/dd_edit_sidecar/: __init__.py  __main__.py  app.py
sidecar/tests/: test_app.py
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  ElementInspector.tsx  GridView.tsx  PreconditionField.tsx  PreviewPane.tsx  ProblemsPanel.tsx  app.css  datatypes.test.ts  datatypes.ts  global.d.ts  icons.tsx  ids.ts  inputs.tsx  main.tsx  pillColors.ts  precondition.test.ts  precondition.ts  sidecar.ts  ucum.test.ts  ucum.ts  unitCell.tsx  urls.ts  yamlHighlight.tsx
src/renderer/src/model/: document.test.ts  document.ts  store.test.ts  store.ts
src/renderer/src/types/: dd-json.gen.ts  document.ts
