[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-edit-sidecar"
version = "0.0.1"
description = "Stateless HTTP sidecar for dd-edit: dd-json in, conversions/findings/HTML out"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
dependencies = [
    # The data dictionary toolkit, pinned to a released tag so the app ships
    # against a known-good build. Bump deliberately.
    "dd-api @ git+https://github.com/bmir-radx/radx-data-dictionary-specification.git@v0.0.7#subdirectory=api",
    "dd-validate @ git+https://github.com/bmir-radx/radx-data-dictionary-specification.git@v0.0.7#subdirectory=validator",
    "dd-printer @ git+https://github.com/bmir-radx/radx-data-dictionary-specification.git@v0.0.7#subdirectory=printer",
    "dd-redcap @ git+https://github.com/bmir-radx/radx-data-dictionary-specification.git@v0.0.7#subdirectory=redcap",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml",  # format sniffing
]

[project.optional-dependencies]
test = ["pytest>=7", "httpx>=0.27"]  # httpx: FastAPI TestClient
build = ["pyinstaller>=6"]  # one-dir binary bundled into the packaged app

[tool.setuptools.packages.find]
where = ["."]
include = ["dd_edit_sidecar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
